mainfest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: countries-deployment-dev
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: countries-deployment-dev
  template:
    metadata:
      labels:
        app: countries-deployment-dev
    spec:
      containers:
        - name: countries-deployment-dev
          image: IMAGE_NAME
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
