mainfest/sercive.yaml
apiVersion: v1
kind: Service
metadata:
  name: countries-service-dev
  namespace: dev
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  selector:
    app: countries-dev
  ports:
    - port: 8000
      targetPort: 8080
  type: NodePort
