mainfest/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: countries-dev-network-policy
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: countries-deployment-dev
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              ingress: countries-deployment-dev
